<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <EditText
        android:id="@+id/dialog_et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_your_email"
        android:inputType="textPersonName"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_reset_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/dialog_tv_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/txt_submit"
        android:textAllCaps="false"
        android:textColor="@color/green_h"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dialog_et_email"
        app:layout_constraintHorizontal_bias=".95"
        app:layout_constraintStart_toStartOf="@+id/dialog_et_email"
        app:layout_constraintTop_toBottomOf="@+id/dialog_et_email"
        app:layout_constraintVertical_bias=".05" />

    <TextView
        android:id="@+id/dialog_tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/txt_cancel"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dialog_et_email"
        app:layout_constraintHorizontal_bias=".05"
        app:layout_constraintStart_toStartOf="@+id/dialog_et_email"
        app:layout_constraintTop_toBottomOf="@+id/dialog_et_email"
        app:layout_constraintVertical_bias=".05" />

    <ProgressBar
        android:id="@+id/dialog_pb"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_tv_cancel"
        app:layout_constraintEnd_toEndOf="@+id/dialog_et_email"
        app:layout_constraintStart_toStartOf="@+id/dialog_et_email"
        app:layout_constraintTop_toTopOf="@+id/dialog_tv_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>