<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bu_black"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:visibility="invisible"
        android:id="@+id/register_cv"
        android:layout_width="@dimen/_64sdp"
        android:layout_height="@dimen/_64sdp"
        app:cardCornerRadius="@dimen/_32sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <ImageView
            android:visibility="invisible"
            android:id="@+id/register_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/white"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_username" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:visibility="invisible"
        android:id="@+id/register_qrSafety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="cursive"
        android:text="@string/txt_select_image"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_cv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_itl_fullName"
        style="@style/TextInputLayoutStyle"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/hint_full_name"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_qrSafety"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_et_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_username"
            android:drawableLeft="@drawable/ic_username"
            android:drawablePadding="@dimen/_8sdp"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_itl_email"
        style="@style/TextInputLayoutStyle"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/hint_email"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_itl_fullName"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/_8sdp"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_itl_password"
        style="@style/TextInputLayoutStyle"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/hint_password"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_itl_email"
        app:layout_constraintWidth_percent=".8"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/_8sdp"
            android:inputType="textPassword"
            android:maxLength="15"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_itl_confPassword"
        style="@style/TextInputLayoutStyle"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/hint_confirm_password"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_itl_password"
        app:layout_constraintWidth_percent=".8"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_et_confPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/_8sdp"
            android:inputType="textPassword"
            android:maxLength="15"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_itl_phone"
        style="@style/TextInputLayoutStyle"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/hint_phone_number"
        android:textColorHint="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:counterTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_itl_confPassword"
        app:layout_constraintWidth_percent=".8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/_8sdp"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:backgroundTint="@color/green_h"
        android:text="@string/BTxt_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_itl_phone"
        app:layout_constraintWidth_percent=".8" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/register_btn"
            app:layout_constraintHorizontal_bias=".25"
            app:layout_constraintStart_toStartOf="@+id/register_btn"
            app:layout_constraintTop_toBottomOf="@+id/register_btn"
            app:layout_constraintVertical_bias=".05" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BTxt_login"
            android:layout_marginStart="@dimen/_4sdp"
            android:textColor="@color/green_h"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/register_btn"
            app:layout_constraintHorizontal_bias=".1"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

