<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bu_black"
    tools:context=".HomeFragment">

    <androidx.cardview.widget.CardView
        android:visibility="invisible"
        android:id="@+id/home_cv"
        android:layout_width="@dimen/_64sdp"
        android:layout_height="@dimen/_64sdp"
        android:layout_margin="@dimen/_16sdp"
        app:cardCornerRadius="@dimen/_32sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/home_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bu_black"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_username_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/home_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/home_cv"
        app:layout_constraintStart_toStartOf="@+id/home_cv"
        app:layout_constraintTop_toBottomOf="@+id/home_cv"
        app:layout_constraintWidth_percent=".25" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/shape_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias=".2">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/_54sdp"
            android:layout_height="@dimen/_54sdp"
            android:layout_margin="@dimen/_16sdp"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/txt_display_result"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_tv_yn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/shape_tv"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHeight_percent=".5"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@color/bu_black"
            android:text="@string/txt_yes_no"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/home_tv_yn"
            app:layout_constraintStart_toStartOf="@+id/home_tv_yn"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/home_btn_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:backgroundTint="@color/red"
            android:fontFamily="cursive"
            android:text="@string/BTxt_result"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/home_tv_yn"
            app:layout_constraintStart_toStartOf="@+id/home_tv_yn"
            app:layout_constraintTop_toBottomOf="@+id/home_tv_yn"
            app:layout_constraintVertical_bias="0" />

        <ProgressBar
            android:id="@+id/home_pb_result"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/red"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/home_tv_yn"
            app:layout_constraintStart_toStartOf="@+id/home_tv_yn"
            app:layout_constraintTop_toBottomOf="@+id/home_tv_yn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/shape_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_tv"
        app:layout_constraintVertical_bias=".05">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/_54sdp"
            android:layout_height="@dimen/_54sdp"
            android:layout_margin="@dimen/_16sdp"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/txt_display_location"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_tv_long"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/shape_tv"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/home_tv_lat"
            app:layout_constraintHeight_percent=".05"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".25" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@color/bu_black"
            android:text="@string/txt_longitude"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/home_tv_long"
            app:layout_constraintStart_toStartOf="@+id/home_tv_long"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_latitude"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/home_tv_lat"
            app:layout_constraintStart_toStartOf="@+id/home_tv_lat"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <TextView
            android:id="@+id/home_tv_lat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:background="@drawable/shape_tv"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/home_tv_long"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".05"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/home_tv_long"
            app:layout_constraintTop_toTopOf="@+id/home_tv_long"
            app:layout_constraintWidth_percent=".25" />

        <Button
            android:id="@+id/home_btn_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:backgroundTint="@color/green_h"
            android:fontFamily="cursive"
            android:text="@string/BTxt_location"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/home_tv_lat"
            app:layout_constraintStart_toStartOf="@+id/home_tv_long"
            app:layout_constraintTop_toBottomOf="@+id/home_tv_long"
            app:layout_constraintVertical_bias="0" />

        <ProgressBar
            android:id="@+id/home_pb_location"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/green"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/home_tv_lat"
            app:layout_constraintStart_toStartOf="@+id/home_tv_long"
            app:layout_constraintTop_toTopOf="@+id/home_btn_location"
            app:layout_constraintVertical_bias="0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".95" />

</androidx.constraintlayout.widget.ConstraintLayout>